--- a/2_rndr.tmpl
+++ b/2_rndr.tmpl
@@ -2,3 +2,5 @@ ORM
 [@ DAL/dao 1-f8855815-1381-2b03 @] 
 
 [@ DAL/dao 1-936091e3-aa77-7566 @] [@ UI/abm 2-40cc9bc4-b9de-be66 @] 
+
+[@ UI/abm 2-40cc9bc4-b9de-be66 @] 
