--- a/templates/gencoui/rndr_builds.html
+++ b/templates/gencoui/rndr_builds.html
@@ -213,26 +213,9 @@
 										<span class="glyphicon btn-glyphicon glyphicon-floppy-save img-circle" ></span>					
 								</a>			    	
 																						
-								<div class="row" style="margin-bottom: 20px;" hidden>
-									<div class="col-xs-12 col-sm-4"><h5 style="margin-top: 10px;margin-right:10px">Entities</h5></div>
-									<div class="col-xs-12 col-sm-6">
-										<select class="form-control" ng-if="direlemento_selected.id != null">
-											<option>abc</option>
-											<option>zte</option>
-											<option>aan</option>
-											<option>zfr</option>
-											<option>zog</option>									
-										</select>
-									</div>
-									<div class="col-xs-12 col-sm-2">
-										<a class="btn icon-btn btn-default btn-xs" ng-if="direlemento_selected.id != null" ng-click="add_entity()" data-placement="bottom"data-tt="tooltip" title="Save">
-										<span class="glyphicon btn-glyphicon glyphicon-floppy-save img-circle" ></span>					
-										</a>
-									</div>
-								</div>
 
 								{% endverbatim %}
-					    		<div id="jstreeBuilds" ></div>
+					    		<div id="jstreeBuilds" style="margin-top:20px"></div>
 		
 				    	
 				  	</div>
@@ -506,34 +489,28 @@
 
 	<div class="modal fade" id="template-entities-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
-	    <div class="modal-dialog modal-lg">
+	    <div class="modal-dialog">
 
 	        <div class="modal-content">
 		        <div class="modal-header">
 			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
 		        	<h4 class="modal-title">Select Entities</h4>
-			    </div>	     
+			    </div>
+			    <div class="modal-body">
+	    		{% verbatim %}
+		    		<h4 style="margin-top: 10px;" ng-if="direlemento_selected.id == null">Entities</h4>
+	    			<h5 style="display:inline;margin-top: 20px;" ng-if="direlemento_selected.id != null">{{direlemento_selected.nombre_padre}}/{{direlemento_selected.nombre}}<sub style="color:#CCCCCC">@</sub>{{elementoentidad_selected.tag}}</h5>				    			
+	    			<span style="display:inline;" class="glyphicon glyphicon-link" ng-if="direlemento_selected.id != null"></span>
 
-	    </div>
-	</div>
-
-	<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-
-	    <div class="modal-dialog modal-sm">
-
-	        <div class="modal-content">
-		        <div class="modal-header">
-			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
-		        	<h4 class="modal-title">Confirm</h4>
-			    </div>	     
-	          	<div class="modal-body">
-	          		{% verbatim %}
-	          		{{globalMessage}}
-	          		{% endverbatim %}
-	          	</div>
+					<select id="cbxEntityTag" style="display:inline; width:200px" class="form-control" ng-if="direlemento_selected.id != null" ng-model="EntityTags[$index]" ng-change="" ng-options="types_cnv.id_entidad as types_cnv.nombre for types_cnv in types_types">
+						<option value=''>Select</option>
+					</select>	
+								    	
+				</div>														
+				{% endverbatim %}	     
 	          	<div class="modal-footer">
 	          		<div style="display:inline">
-		          		<a class="btn icon-btn btn-default" ng-click="delete_template()" data-placement="bottom"data-tt="tooltip" title="Save">
+		          		<a class="btn icon-btn btn-default" ng-click="update_elemento_entidad_tag(direlemento_selected.id, EntityTags[$index])" data-placement="bottom"data-tt="tooltip" title="Save">
 							<span class="glyphicon btn-glyphicon glyphicon-ok img-circle" ></span>					
 						</a>
 					</div>
@@ -543,10 +520,40 @@
 						</a>
 					</div>	
 	          	</div>
+	    	</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+
+	    <div class="modal-dialog" >
+
+	        <div class="modal-content" style="    padding: 20px;
+    margin: 20px 0;
+    /*border: 1px solid #eee;*/
+    border-left-width: 20px;
+    border-radius: 3px; border-left-color: #ce4844;">
+		        <div class="modal-header">
+			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+		        	<h4 class="modal-title">Information</h4>
+			    </div>	     
+	          	<div class="modal-body">
+	          		{% verbatim %}
+	          		{{globalMessage}}
+	          		{% endverbatim %}
+	          	</div>
+	          	<div class="modal-footer">
+					<div style="display:inline">
+						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Close">
+								<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+						</a>
+					</div>	
+	          	</div>
 
 	        </div>
 	    </div>
 	</div>
+
    
 
 </div>
