--- a/static/gencoui/css/rndr-style-dev.css
+++ b/static/gencoui/css/rndr-style-dev.css
@@ -43,7 +43,7 @@
 	        //top: 5px;
 	        right: 8px;
 	        bottom: 0;
-	        left: 8px;
+	        left: 0px;
 	        min-height: 400px;
 	    }
 
@@ -93,7 +93,7 @@
 		    height: 100%;
 		    overflow-y: hidden;
 		   //overflow-x: scroll;
-		    min-height: 400px;
+		    min-height: 300px;
 	    	//background-color:#eee;	    	
 		}
 
@@ -154,3 +154,49 @@
 		    z-index: 999;
 		}
 
+		.card {
+		    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+		}
+
+		.grad {
+		    height: 160px;
+		    width: 100%;
+		    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+		    color: white;
+		    opacity: 0.95;
+		}
+
+
+
+.bubble_message {
+  position: relative;
+  padding: 10px 20px;
+  color: white;
+  background: #0B93F6;
+  border-radius: 25px;
+  float: right;
+  width: 200px;
+}
+.bubble_message:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  bottom: -2px;
+  right: -7px;
+  height: 20px;
+  border-right: 20px solid #0B93F6;
+  border-bottom-left-radius: 16px 14px;
+  -webkit-transform: translate(0, -2px);
+}
+.bubble_message:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -2px;
+  right: -56px;
+  width: 26px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+  -webkit-transform: translate(-30px, -2px);
+}
