--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -52,7 +52,7 @@ body {
 
 <body style="">
        
-
+        {% include "gencoui/rndr_header.html" %}
 
         {% block content %}
         {{ content }}
