--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" href="{% static 'gencoui/css/rndr-style.css' %}">
   <style type="text/css">
     body {
-        background-color: #ccc;
+        background-color: #3a3838;
+    }
+
+    .navbar {
+      margin-bottom: 0px;
+      box-shadow: 0px 5px 10px #3a3838;
     }
   </style>
 {% endblock %}
@@ -31,7 +36,7 @@
 
 
 {% block content %}
-<div  id="ctrl_entities" style="background-color:#eee; width: 98%">
+<div  id="ctrl_entities" style="width: 98%">
 
 <div class="row" style="padding-top: 85px;">
   <div class="col-md-2"></div>
