--- a/static/gencoui/css/rndr-style.css
+++ b/static/gencoui/css/rndr-style.css
@@ -155,7 +155,7 @@
 
 		.navbar {
 			margin-bottom: 0px;
-			box-shadow: 0px 5px 10px #cccccc;
+			box-shadow: 0px 5px 10px #eee;
 		}
 
 		.navbar-brand {
