--- a/templates/gencoui/rndr_header.html
+++ b/templates/gencoui/rndr_header.html
@@ -3,22 +3,38 @@
     <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+            <button hidden type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            {% if user.is_authenticated %}
             <a class="navbar-brand" href="#">
             <img alt="Brand" src="{% static 'gencoui/img/rndr/Generics_saturn.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="40px" data-toggle="modal" data-target="#myModal" sytle="top:10px">
-            </a>          
+            </a>
+            {% endif %}
         </div>
         <div style="float: right; margin-top:20px">
             {% if user.is_authenticated %}
-                <p style="color:white; display:inline;">{{ user.get_username }} <a href="/logout">logout</a></p>
+                <p style="color:white; display:inline;">{{ user.get_username }}</p>
+                <div class="dropdown" style="color:white; display:inline;">
+                  <button class="btn btn-primary dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <span class="glyphicon glyphicon-menu-hamburger" ></span>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="/login/logout">logout</a></li>
+                  </ul>
+                </div>
             {% else %}
-                <p style="color:white; display:inline;">Welcome <a href="/login">login</a></p>
+                <p style="color:white; display:inline;">Welcome</p>
             {% endif %}
+
+
         </div>  
         <!-- Collect the nav links, forms, and other content for toggling -->
 <!--         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
