--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -105,6 +105,32 @@
 {% block content %}
 <div class="container-fluid" id="ctrl_lang" ng-app="app_lang" ng-controller="ctrl_lang">
 
+
+	    <div id="sidebar" >
+	    	<span id="position"></span>
+	    	<div id="dragbar"></div>			    
+
+	    		<div class="container-fluid" style="margin-top:70px;">
+
+				    <div style="margin-bottom: 15px;">				    	
+				    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Languajes </h4>
+				    	<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#lang-add-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" ng-click="new_lang()">
+							<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
+						</a>
+				    </div>	
+
+				    <div id="jstree"></div>
+
+				</div>       
+	    	
+		</div>
+
+	    <div id="main">
+	    	<div id="tree" style="margin-top:70px;height:85%;">
+	    	</div>
+	    </div>
+
+
 	    <div class="jumbotron">
 
     			<div class="rndr-head-container" style="margin-bottom:20px">
