--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,36 +1,47 @@
 {% extends "admin/base.html" %}
 {% load staticfiles %}
+{% load widget_tweaks %}
 {% block title %}SnippetWS{% endblock %}
-
+{% block extrastyle %}
+	<link rel="stylesheet" href="{% static 'gencoui/css/rndr-style-dev.css' %}">
+	<link rel="stylesheet" href="{% static 'gencoui/css/rndr-style.css' %}">
+{% endblock %}
 {% block content %}
 <div class="container-fluid" style="margin-top:70px; height:100%">
 
 	<div class="row" >
-		<div class="col-sm-8" style="background-color: #ccc;">
+		<div class="col-sm-8" style="">
 			<div >
-				<video width="320" height="240" controls>
-					<source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-					<source src="https://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
-					Your browser does not support HTML5 video.
-				</video>
+				
 			</div>
 
 		</div>
-		<div class="col-sm-4" style="background-color: #18bc9c">
+		<div class="col-sm-4" style="">
 			<div >
-				<div style="height: 300px ;width: 300px; padding:10px;  float: right">
-					<h2>Login</h2>
+				<div style="height: 300px ;width: 300px; padding:10px;">
+					<h3>Login</h3>
 					<form method="post">
 						{% csrf_token %}
-						{{ form.as_p }}
-						<button class="btn btn-success btn-sm" type="submit">Login</button>
+						<div class="form-group">
+								{{ form.username.errors }}
+							    {{ form.username.label_tag }}
+							    {{ form.username|add_class:"form-control"  }}
+					    </div>
+					    <div class="form-group">
+					    		{{ form.password.errors }}
+							    {{ form.password.label_tag }}
+							    {{ form.password|add_class:"form-control" }}
+						</div>
+						<button class="btn btn-primary btn-sm" type="submit">Login</button>
+						<a href="/login/register" style="padding-left:10px">Forgot password?</a> 
 					</form>
+					<div style="padding-top:20px;">
+						<label>Do you have an account?</label><a  style="padding-left:15px;" href="/login/register">Sign up</a> 
+					</div>
 				</div>
 			</div>
 
 		</div>
 	</div>
-
 </div>
-
 {% endblock %}
